picture added to homepage

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 
 <html>
 <head>
-	<title></title>
+	<title> Global Warming Project</title>
 </head>
 <body>
-	
+	<div id="container">
 	<h1 id="heading"> Global Warming Cause </h1>
+
+<img src="images/banner.jpg">
 
 	<nav>   
 
@@ -24,6 +26,8 @@
 </ul> 
 
 </nav>
+
+<p 
 
 
 <footer>
@@ -45,7 +49,7 @@
 
 
 
-
+</container>
 
 </body>
 </html>
