--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 <head>
 	<title> Global Warming Project</title>
+	<link href="CSS/style.css" rel="StyleSheet"/>
 </head>
 <body>
 	<div id="container">
 	<h1 id="heading"> Global Warming Cause </h1>
 
-<img src="images/banner.jpg">
+<img src="images/homepage-image.jpg">
 
 	<nav>   
 
@@ -17,30 +18,48 @@
 		<a href="index1.html">Home</a>     
 	</li>     
 	<li>       
-		<a href="index2.html">Cause</a>     
+		<a href="cause.html">Cause</a>     
 	</li>   
 	<li>
-		<a href="index3.html">Contacts</a>
+		<a href="contact.html">Contacts</a>
 	</li>
 
 </ul> 
 
 </nav>
 
-<p 
+<h4 class="header"> Extreme Weather: Impacts of Climate Change </h4>
+
+<p class="par">
+Heat waves, wildfires, floods and droughts hit us hard in 2012 (the warmest year on record for the United States). Scientists warn that if we don't address climate change, this is just a taste of what we could expect in the years ahead. You can use our interactive map to see how your local community was affected by extreme weather last year.
+</p>
+
+<h4 class="header"> Using the Clean Air Act to Limit Carbon Pollution </h4>
+
+<p class"par">
+In the United States, electric power plants emit more than two billion tons of carbon dioxide each year, or roughly 40 percent of total emissions. The nation's landmark air pollution law could cut that number significantly.
+
+</p>
+
+
+<h4 class="header"> Climate Change, Water, and Risk </h4>	
+
+<p>
+Climate change will have a significant impact on the sustainability of water supplies in the coming decades. A new analysis, performed by consulting firm Tetra Tech for the Natural Resources Defense Council (NRDC), examined the effects of global warming on water supply and demand in the contiguous United States. The study found that more than 1,100 counties -- one-third of all counties in the lower 48 -- will face higher risks of water shortages by mid-century as the result of global warming. More than 400 of these counties will face extremely high risks of water shortages. 
+</p>
 
 
 <footer>
 
 <ul class="footer">     
 	<li>       
-		<a href="index1.html">Home</a>     
+		<a href="index.html">Home</a>     
 	</li>     
 	<li>       
-		<a href="index2.html">Cause</a>     
+		<a href="cause.html">Cause</a>     
 	</li>   
 	<li>
-		<a href="index3.html">Contacts</a>
+		<a href="contacts.html">Contacts</a>
 	</li>
 
 </ul> 
