--- a/cause.html
+++ b/cause.html
@@ -2,6 +2,7 @@
 <<html>
 <head>
 	<title>Our Cause</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 		<div id="container">
 	<h1 id="heading">Global Warming Cause</h1>
@@ -16,16 +17,32 @@
 		<a href="cause.html">Cause</a>     
 	</li>   
 	<li>
-		<a href="contact.html">Contacts</a>
+		<a href="contact.html">Contact</a>
 	</li>
 
 </ul> 
 
 </nav>
 
-<p 
+<div class="cause1">
+	<img src="images/bear.jpg">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget anteLorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante</p>
+		</div>
+
+<div class="cause2">
+	<img src="images/underWater.jpg">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget anteLorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante</p>
+		</div>
+
+<div class="cause3">
+	<img src="images/globe.jpg">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget anteLorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam placerat tellus at massa tincidunt, sed consequat massa auctor. In rutrum massa felis, ac gravida augue faucibus in. Etiam dapibus sed odio et pretium. Suspendisse pharetra aliquam massa. Sed condimentum eu mauris sed imperdiet. Ut luctus nibh mi, vel pretium risus tempor quis. Morbi nibh risus, iaculis quis ante quis, hendrerit dapibus velit. Praesent arcu justo, congue a consequat quis, mollis eget ante</p>
+		</div>
 
 
+<div class="donate">
+	<button type="button">Donate Here</button>
+</div>
 <footer>
 
 <ul class="footer">     
@@ -36,7 +53,7 @@
 		<a href="cause.html">Cause</a>     
 	</li>   
 	<li>
-		<a href="contact.html">Contacts</a>
+		<a href="contact.html">Contact</a>
 	</li>
 
 </ul> 
