--- a/cause.html
+++ b/cause.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<<html>
+<html>
 <head>
 	<title>Our Cause</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -41,7 +41,7 @@
 
 
 <div class="donate">
-	<button type="button">Donate Here</button>
+	<button class="donate-btn" type="button">Donate Here</button>
 </div>
 <footer>
 
