--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
 </nav>
 
+<div>
+
 <div class="header">
 	<h3> Extreme Weather: Impacts of Climate Change </h3>
 Heat waves, wildfires, floods and droughts hit us hard in 2012 (the warmest year on record for the United States). Scientists warn that if we don't address climate change, this is just a taste of what we could expect in the years ahead. You can use our interactive map to see how your local community was affected by extreme weather last year.
@@ -44,6 +46,12 @@ In the United States, electric power plants emit more than two billion tons of c
 <div class="header">
 	<h3> Climate Change, Water, and Risk </h3>	
 Climate change will have a significant impact on the sustainability of water supplies in the coming decades. A new analysis, performed by consulting firm Tetra Tech for the Natural Resources Defense Council (NRDC), examined the effects of global warming on water supply and demand in the contiguous United States. The study found that more than 1,100 counties -- one-third of all counties in the lower 48 -- will face higher risks of water shortages by mid-century as the result of global warming. More than 400 of these counties will face extremely high risks of water shortages.Heat waves, wildfires, floods and droughts hit us hard in 2012 (the warmest year on record for the United States). Scientists warn that if we don't address climate change, this is just a taste of what we could expect in the years ahead. You can use our interactive map to see how your local community was affected by extreme weather last year.<a href="http://www.nrdc.org/globalwarming/watersustainability/index.asp">Read More</a> 
+</div>
+
+</div>
+
+<div class="donate">
+	<button class="donate-btn" type="button">Donate Here</button>
 </div>
 
 <footer>
@@ -65,7 +73,7 @@ Climate change will have a significant impact on the sustainability of water sup
 
 
 
-</container>
+</div>
 
 </body>
 </html>
