worked on the contact page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a href="cause.html">Cause</a>
 		</li>   
 	    <li> 
-	    	<a href="contact.html">Contacts</a>
+	    	<a href="contact.html">Contact</a>
 	    </li>
 	</ul> 
 
@@ -66,7 +66,7 @@ Climate change will have a significant impact on the sustainability of water sup
 		<a href="cause.html">Cause</a>     
 	</li>   
 	<li>
-		<a href="contacts.html">Contacts</a>
+		<a href="contacts.html">Contact</a>
 	</li>
 
 </ul> 
