--- a/index.html
+++ b/index.html
@@ -11,21 +11,14 @@
 
 <img src="images/homepage-image.jpg">
 
-<nav>   
-
-	<ul class="nav">     
-		<li> 
-			<a href="index1.html">Home</a>
-		</li>  
-		<li> 
-			<a href="cause.html">Cause</a>
-		</li>   
-	    <li> 
-	    	<a href="contact.html">Contact</a>
-	    </li>
-	</ul> 
-
-</nav>
+			<nav>   
+				<ul class="nav">     
+					<li><a href="index.html">Home</a></li>     
+					<li><a href="cause.html">Cause</a></li>   
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="donate.html">Donate</a></li>
+				</ul> 
+			</nav>
 
 <div>
 
