added more jQuery to the donate page

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 					<p class="bigger">Global warming is worsening.  It seems that new reports appear with increasing frequency emphasizing the worsening of global warming due to increased accumulation of manmade greenhouse gases (GHGs) in the atmosphere.  They show that extreme weather or climate events already appear to be more severe and/or frequent than in the past, and will continue to worsen.</p>
 
 					<h2>Contact Us</h2>
-					<p>Fill out the below form with any questions you may have and receive a free e-brochure. And please <a href="#">donate to help stop global warming.</a></p>
+					<p>Fill out the below form with any questions you may have and receive a free e-brochure. And please <a href="donate.html">donate to help stop global warming.</a></p>
 
 					<form>
 						
