--- a/cause.html
+++ b/cause.html
@@ -2,9 +2,26 @@
 <html>
    <head>
       <title>Our Cause</title>
+      <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+      <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+      <script src="js/causes.js"></script>
+      <script src="js/jquery.simpleWeather.js"></script>
       <link rel="stylesheet" type="text/css" href="css/style.css">
-   </head>
+     
+   </head>  
+
    <div id="container">
+      <div id="allWeather">
+      <div id="weather"></div>
+      <div id="currentWeather">
+      <p>Current Weather</p></div>
+
+
+      <div id="pastWeather">
+      <p>Weather 50 Years Ago</p></div>
+      
+      <button class="js-geolocation" style="display: none;">Use Your Location</button>
+   </div>
       <h1 id="heading">Global Warming Cause</h1>
       <nav>
          <ul class="nav">
