updated JS and CSS file

--- a/cause.html
+++ b/cause.html
@@ -12,16 +12,17 @@
 
    <div id="container">
       <div id="allWeather">
-      <div id="weather"></div>
-      <div id="currentWeather">
-      <p>Current Weather</p></div>
+         <div id="weather"></div>
+         <div id="currentWeather">
+            <p>Current Weather</p>
+         </div>
+         <div id="pastWeather">
+            <p>Weather 50 Years Ago</p>
+         </div>
+         
+         <button class="js-geolocation" style="display: none;">Use Your Location</button>
+      </div>
 
-
-      <div id="pastWeather">
-      <p>Weather 50 Years Ago</p></div>
-      
-      <button class="js-geolocation" style="display: none;">Use Your Location</button>
-   </div>
       <h1 id="heading">Global Warming Cause</h1>
          <nav>   
             <ul class="nav">     
